--- a/Project_merged.ipynb
+++ b/Project_merged.ipynb
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80e07efd",
+   "id": "0309592f",
    "metadata": {},
    "source": [
     "**Data Pre-Processing**"
@@ -869,7 +869,19 @@
     "\n",
     "corpus = train_df['Comments'].astype(str)\n",
     "\n",
+    "\n",
+    "\n",
     "corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "5e19fa4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = [str (item) for item in corpus]"
    ]
   },
   {
@@ -882,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "id": "e62ad7e5",
    "metadata": {},
    "outputs": [
@@ -892,7 +904,7 @@
        "(808062, 385796)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "id": "6776edf3",
    "metadata": {},
    "outputs": [],
@@ -925,8 +937,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "8450312c",
+   "execution_count": 53,
+   "id": "0d4c3ef2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "id": "9cba2108",
    "metadata": {},
    "outputs": [],
@@ -949,6 +961,28 @@
     "x_train_df.shape\n",
     "\n",
     "X_new=Countvecs.astype('U')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "15191e66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<808062x385796 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 5537473 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train_tfidf"
    ]
   },
   {
@@ -1051,12 +1085,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "b63eae47",
+   "execution_count": null,
+   "id": "4930902c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters = {'solver': [ 'lbfgs', 'liblinear', 'saga'], 'verbose': [0, 1, 2]}\n",
+    "\"\"\"parameters = {'solver': [ 'lbfgs', 'liblinear', 'saga'], 'verbose': [0, 1, 2]}\n",
     "\n",
     "# multinomial logistic regression a.k.a softmax classifier\n",
     "logit = LogisticRegression(random_state= 42)\n",
@@ -1064,13 +1098,122 @@
     "logit_classifier = GridSearchCV(logit, parameters, cv = 10, n_jobs= 4)\n",
     "\n",
     "# sklearn's pipeline\n",
-    "Binary_logit_pipeline = Pipeline([('vectorizer', vectorizer),  ('logit_classifier', logit_classifier)])"
+    "Binary_logit_pipeline = Pipeline([('vectorizer', vectorizer),  ('logit_classifier', logit_classifier)])\n",
+    "\n",
+    "\n",
+    "# Evaluation\n",
+    "print ('\\n Confusion Matrix \\n')  \n",
+    "print (confusion_matrix(test_y,valid_pred))\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b63eae47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training and Test Split           \n",
+    "train_x, test_x, train_y, y_test = train_test_split(corpus, label, test_size=0.20, random_state=42,stratify=labels)\n",
+    "\n",
+    "#Classifier pipeline\n",
+    "\n",
+    "#Multinomial Naive bayes\n",
+    "clf_mnb=MultinomialNB(alpha=0,fit_prior=True, class_prior=None)  \n",
+    "\n",
+    "#Decision tree classifier\n",
+    "clf_dt = DecisionTreeClassifier(random_state=40)\n",
+    "clf_dt_parameters = {'clf__criterion':('gini', 'entropy'),'clf__max_features':('auto', 'sqrt', 'log2'),'clf__ccp_alpha':(0.01,0.02,0.03,0.04,0.05,0.06,0.07,0.08,0.09,0.1)}\n",
+    "\n",
+    "#Feature Extraction\n",
+    "pipeline_lr = Pipeline([\n",
+    "('vect', CountVectorizer(token_pattern=r'\\b\\w+\\b')),\n",
+    "('tfidf', TfidfTransformer(use_idf=True,smooth_idf=True)),     \n",
+    "('clf', clf_lr)]) \n",
+    "\n",
+    "pipeline_dt = Pipeline([\n",
+    "('vect', CountVectorizer(token_pattern=r'\\b\\w+\\b')),\n",
+    "('tfidf', TfidfTransformer(use_idf=True,smooth_idf=True)),     \n",
+    "('clf', clf_dt)])\n",
+    "\n",
+    "pipeline_dt = Pipeline([\n",
+    "('vect', CountVectorizer(token_pattern=r'\\b\\w+\\b')),\n",
+    "('tfidf', TfidfTransformer(use_idf=True,smooth_idf=True)),     \n",
+    "('clf', clf_mnb)])\n",
+    "\n",
+    "\n",
+    "pipelines=[pipeline_lr, pipeline_dt, pipeline_mnb]\n",
+    "\n",
+    "best_accuracy=0.0\n",
+    "best_classifier=0\n",
+    "best_pipeline=\"\"\n",
+    "\n",
+    "# Dictionary of pipelines and classifier types for ease of reference\n",
+    "pipe_dict = {0: 'Multinomial Naive bayes', 1: 'Decision Tree'}\n",
+    "\n",
+    "# Fit the pipelines\n",
+    "for pipe in pipelines:\n",
+    "\tpipe.fit(train_x, train_y)\n",
+    "\n",
+    "for i,model in enumerate(pipelines):\n",
+    "    print(\"{} Test Accuracy: {}\".format(pipe_dict[i],model.score(test_x, y_test)))\n",
+    "\n",
+    "for i,model in enumerate(pipelines):\n",
+    "    if model.score(test_x, y_test)>best_accuracy:\n",
+    "        best_accuracy=model.score(X_test,y_test)\n",
+    "        best_pipeline=model\n",
+    "        best_classifier=i\n",
+    "print('Classifier with best accuracy:{}'.format(pipe_dict[best_classifier]))\n",
+    "\n",
+    "#Classification\n",
+    "parameters={**clf_lr_parameters} \n",
+    "grid = GridSearchCV(pipeline,parameters,scoring='f1_micro',cv=10)          \n",
+    "grid.fit(train_x,train_y)     \n",
+    "clf= grid.best_estimator_  \n",
+    "print('********* Best Set of Parameters ********* \\n\\n')\n",
+    "print(clf)\n",
+    "\n",
+    "predicted = clf.predict(test_x)\n",
+    "predicted =list(predicted)\n",
+    "       \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91a91f80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature Extraction\n",
+    "pipeline = Pipeline([\n",
+    "    ('vect', CountVectorizer(token_pattern=r'\\b\\w+\\b')),\n",
+    "    ('feature_selector', SelectKBest(chi2, k=1000)),         \n",
+    "    ('tfidf', TfidfTransformer(use_idf=True,smooth_idf=True)),     \n",
+    "    ('clf', clf),]) \n",
+    "        \n",
+    "feature_parameters = {\n",
+    "    'vect__min_df': (2,3),\n",
+    "    'vect__ngram_range': ((1,1),(1, 2),(1,3),(2,3)),  # Unigrams, Bigrams or Trigrams\n",
+    "    }\n",
+    "    \n",
+    "# Classificaion\n",
+    "parameters={**feature_parameters,**clf_parameters} \n",
+    "grid = GridSearchCV(pipeline,parameters,scoring='f1_micro',cv=10)          \n",
+    "grid.fit(train_x, train_y)     \n",
+    "clf= grid.best_estimator_  \n",
+    "print('********* Best Set of Parameters ********* \\n\\n')\n",
+    "print(clf)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "3b1863a5",
+   "id": "a0169650",
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1259,28 @@
     }
    ],
    "source": [
-    "tfidf_logit_pipeline.fit(x_train, y_train)\n"
+    "valid_pred = clf.predict(test_x)\n",
+    "valid_pred =list(predicted)\n",
+    "\n",
+    "#GridSearch - and find best parameters\n",
+    "\n",
+    "def model_score(y_test, valid_pred):\n",
+    "    mp=average_precision_score(y_test, valid_pred, average='micro')\n",
+    "\n",
+    "    pre = precision_score(y_test, valid_pred, average='binary') \n",
+    "    print ('\\n Precision:'+str(pr)) \n",
+    "\n",
+    "    rec = recall_score(y_test,valid_pred, average='binary') \n",
+    "    print ('\\n Recall:'+str(rec))\n",
+    "\n",
+    "    f1 = f1_score(y_test, valid_pred, average='binary') \n",
+    "    print ('\\n Micro Averaged F1-Score:'+str(fm))\n",
+    "    \n",
+    "    return \n",
+    "\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "np.shape(X)\n",
+    "labels=train_df['label'].to_list()\n"
    ]
   },
   {
@@ -1165,7 +1329,7 @@
     "mp=average_precision_score(y_test, valid_pred, average='micro')\n",
     "\n",
     "print ('Model Performance: ')\n",
-    "print ('Micro)\n",
+    "print ('Micro-averaged precision', mp )\n",
     "print ('Precision: ', pre)\n",
     "print ('Recall: ',rec)\n",
     "print ('F1 Score: ', f1)\n",
@@ -1214,7 +1378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
